Fixed spacing and color issues with activity log
The pre formatted text was sometimes on the same line as the log
text and sometimes not, creating weird formatting issues. Fixed this
by giving it a min width so it's always on different line.

Ensured log text was shown to be clickable

The code text failed 508 as there wasn't enough contrast so used the
lightest gray for the background.

--- a/src/css/components/activity_log.scss
+++ b/src/css/components/activity_log.scss
@@ -17,6 +17,7 @@
 .activity_log-item {
   align-items: center;
   border-bottom: 1px solid #ccc;
+  cursor: pointer;
   display: flex;
   flex-wrap: wrap;
   margin: 0;
@@ -71,11 +72,12 @@
 .activity_log-item_raw {
   flex-grow: 2;
   font-size: .8rem;
-  max-width: 890px;
+  max-width: 60rem;
+  min-width: 50rem;
 }
 
 .activity_log-item_raw pre {
-  background-color: #ccc;
+  background-color: $color-gray-lightest;
   padding: .8rem;
 }
 
